<resources>
    <string name="app_name">Quick Blogger</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pick_blog">Pick a Blog</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Sign in to continue</string>
    <string name="server_client_id">1011439056702-pbb0sgm6vm27offe60ir95mj18h8bha7.apps.googleusercontent.com</string>
    <string name="firebase_url">https://quick-blogger-1.firebaseio.com</string>


    <string name="blogger_com">Sign up at blogger.com if you dont have an account</string>
    <string name="goto_blogger_com">Create Account</string>
    <string name="action_sign_in">SIGN IN WITH GOOGLE</string>
    <string name="action_sign_in_short">Sign in </string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
